[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "lunapi"
version = "0.0.1"
readme = "README.md"
description = "lunapi"
requires-python = ">=3.8"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[project.urls]
"www" = "https://zzz.bwh.harvard.edu/luna"
