[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "lunapi"
version = "1.3.8"
readme = "README.md"
description = "Python interface to the Luna toolset for sleep signal analysis"
requires-python = ">=3.9"
dependencies = [
  'pandas>=2,<3',
  'numpy>=2',
  'matplotlib>=3,<4.0',
  'scipy>=1,<2',
  'plotly>=5,<6',
  'nbformat>=5,<6',
  'ipywidgets>=8,<9',
  'tqdm>=4,<5' ,
  'requests>=2,<3',
  'IPython' ]
keywords = ["Sleep", "EEG", "PSG", "Luna", "Signal processing" ]

authors = [
  {name = "Shaun Purcell", email = "smpurcell@bwh.harvard.edu"},
  {name = "Senthil Palanivelu", email = "spalanivelu@mgh.harvard.edu"},
  {name = "Nataliia Kozhemiako", email = "nkozhemiako@bwh.harvard.edu"} ]

maintainers = [
  {name = "Senthil Palanivelu", email = "spalanivelu@mgh.harvard.edu"},
] 

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Framework :: Jupyter :: JupyterLab",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]

[tool.cibuildwheel]
skip = "pp*"

[project.urls]
"www" = "https://zzz.bwh.harvard.edu/luna"
"github" = "http://github.com/remnrem/luna-api"
